--- a/src/app/admin/layout/layout.component.html
+++ b/src/app/admin/layout/layout.component.html
@@ -1,1 +1,5 @@
-<p>layout works!</p>
+<app-header></app-header>
+<app-sidebar></app-sidebar>
+
+<router-outlet></router-outlet>
+<app-footer></app-footer>
