Layout Tasarımı Yapıldı

--- a/src/app/admin/layout/components/footer/footer.component.html
+++ b/src/app/admin/layout/components/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<footer class="footer ">
+  <div class="container text-center">
+    <p>&copy; Simple Library Admin Panel</p>
+
+  </div>
+</footer>
