--- a/src/app/admin/layout/components/header/header.component.html
+++ b/src/app/admin/layout/components/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<nav class="navbar bg-primary" data-bs-theme="dark" style="z-index: 3;">
+  <div class="container-fluid">
+    <a class="navbar-brand">Admin Panel</a>
+    <form class="d-flex" role="search">
+
+
+    </form>
+  </div>
+</nav>
