--- a/src/app/admin/layout/components/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/components/sidebar/sidebar.component.html
@@ -1,1 +1,17 @@
-<p>sidebar works!</p>
+<mat-list role="list" class="btn-toggle-nav  fw-normal pb-1 ">
+
+
+    <a mat-list-item role="listitem"  routerLink="/admin">Dashboard</a>
+    <a mat-list-item role="listitem"  routerLink="books">Kitaplar</a>
+    <a mat-list-item role="listitem" routerLink="authors">Yazarlar</a>
+    <a mat-list-item role="listitem" routerLink="addresses">Adresler</a>
+    <a mat-list-item role="listitem" routerLink="persons">Üyeler</a>
+    <a mat-list-item role="listitem" routerLink="catalogs">Kataloglar</a>
+    <a mat-list-item role="listitem" routerLink="languages">Diller</a>
+    <a mat-list-item role="listitem" routerLink="neighboorHood">Mahalleler</a>
+    <a mat-list-item role="listitem" routerLink="employees">Çalışanlar</a>
+
+
+
+
+</mat-list>
