Spinner isimleri eklendi

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,7 @@
   size="medium"
   color="#fff"
   type="ball-scale"
+  name = "ball-scale"
 >
   <p style="font-size: 20px; color: white">Loading...</p>
 </ngx-spinner>
@@ -49,6 +50,7 @@
   size="medium"
   color="#fff"
   type="timer"
+  name = "timer"
 >
   <p style="font-size: 20px; color: white">Loading...</p>
 </ngx-spinner>
@@ -57,6 +59,7 @@
   size="medium"
   color="#fff"
   type="pacman"
+  name ="pacman"
 >
   <p style="font-size: 20px; color: white">Loading...</p>
 </ngx-spinner>
@@ -65,6 +68,7 @@
   size="medium"
   color="#fff"
   type="fire"
+  name ="fire"
 >
   <p style="font-size: 20px; color: white">Loading...</p>
 </ngx-spinner>
@@ -73,6 +77,7 @@
   size="medium"
   color="#fff"
   type="line-scale"
+  name = "line-scale"
 >
   <p style="font-size: 20px; color: white">Loading...</p>
 </ngx-spinner>
