--- a/src/app/admin/components/authors/authors.component.html
+++ b/src/app/admin/components/authors/authors.component.html
@@ -1,1 +1,4 @@
-<p>authors works!</p>
+<div class="example-container">
+  <div  style="height: 100%;"  opened><app-create></app-create></div>
+  <app-list></app-list>
+</div>
