--- a/src/app/admin/components/books/books.component.html
+++ b/src/app/admin/components/books/books.component.html
@@ -1,1 +1,4 @@
-<p>books works!</p>
+<div class="example-container">
+  <div  style="height: 100%;"  opened><app-create></app-create></div>
+  <app-list></app-list>
+</div>
