--- a/src/app/admin/components/persons/persons.component.html
+++ b/src/app/admin/components/persons/persons.component.html
@@ -1,1 +1,6 @@
-<p>persons works!</p>
+<div class="example-container">
+  <div  style="height: 100%;"  opened><app-create></app-create></div>
+  <app-list></app-list>
+</div>
+
+
