--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,16 @@
     </div>
   </div>
 </nav>
-<router-outlet></router-outlet>
+<div style="height: 100%;"><router-outlet></router-outlet></div>
+
+<footer class="footer ">
+  <div class="container text-center">
+    <p>&copy; Simple Library Admin Panel</p>
+
+  </div>
+</footer>
+
+
 <ngx-spinner
   bdColor="rgba(51,51,51,0.8)"
   size="medium"
