--- a/src/app/admin/layout/components/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/components/sidebar/sidebar.component.html
@@ -1,17 +1,17 @@
-<mat-list role="list" class="btn-toggle-nav  fw-normal pb-1 ">
+<div class="row   btn-toggle-nav  fw-normal pb-1  "  style="width: 100%;" >
+  <div class="col-4">
+    <div class="list-group" id="list-tab" role="tablist" style="width: 145px;">
+      <a class="list-group-item list-group-item-action" style="border-radius: 0;"  data-bs-toggle="list" routerLink="/admin">Dashboard</a>
+      <a class="list-group-item list-group-item-action"  data-bs-toggle="list" routerLink="books">Kitaplar</a>
+      <a class="list-group-item list-group-item-action"  data-bs-toggle="list"routerLink="authors">Yazarlar</a>
+      <a class="list-group-item list-group-item-action" data-bs-toggle="list" routerLink="addresses">Adresler</a>
+      <a class="list-group-item list-group-item-action" data-bs-toggle="list" routerLink="persons">Üyeler</a>
+      <a class="list-group-item list-group-item-action" data-bs-toggle="list" routerLink="catalogs">Kataloglar</a>
+      <a class="list-group-item list-group-item-action" data-bs-toggle="list" routerLink="languages">Diller</a>
+      <a class="list-group-item list-group-item-action" data-bs-toggle="list" routerLink="neighboorHood">Mahalleler</a>
+      <a class="list-group-item list-group-item-action" data-bs-toggle="list" routerLink="employees">Çalışanlar</a>
+    </div>
+  </div>
 
 
-    <a mat-list-item role="listitem"  routerLink="/admin">Dashboard</a>
-    <a mat-list-item role="listitem"  routerLink="books">Kitaplar</a>
-    <a mat-list-item role="listitem" routerLink="authors">Yazarlar</a>
-    <a mat-list-item role="listitem" routerLink="addresses">Adresler</a>
-    <a mat-list-item role="listitem" routerLink="persons">Üyeler</a>
-    <a mat-list-item role="listitem" routerLink="catalogs">Kataloglar</a>
-    <a mat-list-item role="listitem" routerLink="languages">Diller</a>
-    <a mat-list-item role="listitem" routerLink="neighboorHood">Mahalleler</a>
-    <a mat-list-item role="listitem" routerLink="employees">Çalışanlar</a>
 
-
-
-
-</mat-list>
