--- a/src/app/admin/layout/layout.component.html
+++ b/src/app/admin/layout/layout.component.html
@@ -1,127 +1,21 @@
-<app-header></app-header>
+
 
 <mat-drawer-container class="example-container" autosize>
 
-  <mat-drawer #drawer class="example-sidenav" mode="side">
+  <mat-drawer  opened class="example-sidenav" mode="side">
     <app-sidebar></app-sidebar>
   </mat-drawer>
 
-  <div  class="example-sidenav-content">
+  <div  class="example-sidenav-content" style="padding-top: 55px;">
 
 
      <router-outlet></router-outlet>
 
 
-
-Ana menü
-
-VikipediÖzgür Ansiklopedi
-Vikipedi üzerinde ara
-Ara
-Hesap oluştur
-Oturum aç
-
-Kişisel araçlar
-[kapat]
-
-
-Ödüllü Vikibahar 2024 Yarışması başladı! Katılmak için Vikibahar 2024
-sayfasını ziyaret edin.
-İçindekiler gizle
-Giriş
-Yapısı
-Paragrafta anlatım teknikleri
-Paragrafta anlatım teknikleri alt bölümünü aç/kapa
-Betimleme
-Öyküleme
-Açıklama
-Tartışma
-Paragrafta düşünceyi geliştirme yolları
-Paragrafta düşünceyi geliştirme yolları alt bölümünü aç/kapa
-Karşılaştırma
-Tanımlama
-Örneklendirme
-Tanık gösterme
-Benzetme
-Kişileştirme
-Sayısal Verilerden Yararlanma
-Paragrafta konu ve ana düşünce
-Paragrafta konu ve ana düşünce alt bölümünü aç/kapa
-Konu
-Ana düşünce
-Paragraf
-
-Madde
-Tartışma
-Oku
-Bekleyen değişiklikler
-Değiştir
-Kaynağı değiştir
-Geçmişi gör
-
-Araçlar
-Vikipedi, özgür ansiklopedi
-Paragraf, herhangi bir yazının bir satır başından öteki satır başına kadar olan bölümüne denir. Daha geniş bir ifadeyle, paragraf "bir duyguyu, bir düşünceyi, bir isteği, bir durumu, bir öneriyi, olayın bir yönünü, yalnızca bir yönüyle anlatım tekniklerin­den ve düşünceyi geliştirme yollarından yararlanarak anlatan yazı türüdür. Kelimeler cümleleri, cümleler paragrafları, paragraflar da yazıları oluşturur. Paragraf bir yazının küçültülmüş bir örneğidir. Bu yönüyle yapı bakımından bir yazıya benzer.
-
-Yapısı
-Giriş paragrafı: Paragrafın anlatmak istediğini, konusunu belirten cümledir. 1-2 cümleyi geçmez ve paragrafın başında yer alır.
-Gelişme paragrafı: Paragrafın açılıp ilerlemesi için örneklerden, karşıtlıklardan, benzerliklerden faydalanma bölümüdür. Bu bölüme geçiş paragrafı da denir.
-Sonuç paragrafı: Paragrafın son cümleleridir. Sonuç bölümü çoğunlukla tek bir cümleden meydana gelir. En kuvvetli fikir, en önemli görüş, sonuç cümlesinde yer almalıdır.
-Paragrafta anlatım teknikleri
-Betimleme
-Gözleme dayalı olan anlatım türüdür. Yazar bolca niteleme sıfatları kullanarak okuyucuya gördüklerini ve düşündüklerini anlatmaya ve okurun kafasında canlandırmaya çalışır. Betimlemeye tasvirleme adı da verilir ve durağan bir yapı söz konusudur. Betimlemede varlıkların şekil, renk, boyut gibi ayırt edici özellikleri verilir. Betimlemede yazar gördüklerine kişisel yorumlarını katarsa öznel betimleme denir. Yazar gördüklerini aynen aktarıp ekleme yapmayıp kişisel görüşten kaçınırsa buna nesnel betimleme denir.
-
-Öyküleme
-Olay anlatımı olarak da tanımlanır. Öyküleme tekniğinde özne, mekan, zaman üçlüsü mutlaka olmalıdır. Olaylar belirli bir oluş sırasına göre verilir. Durağan bir yapı olmayıp hareketlilik söz konusudur.Yani hareket çoktur. Öyküleme tekniğinde daha çok geçmiş zaman dilimi kullanılır.Öyküleme; yaşanan, görülen duyulan ya da tasarlanan olayların anlatılması demektir.
-
-Açıklama
-Bir konuda okuyucuyu bilgilendirme amacıyla yazılan metinlerdeki anlatım tekniğidir. Genellikle nesnel bir dil kullanılır ve içeriğin sade ve yalın olması tercih edilir. Ders kitapları ve ansiklopedilerde kullanılan teknik açıklama tekniğidir.
-
-Tartışma
-Tartışmada önce bir düşünce verilir ardından verilen düşünce eleştirilip ona karşı başka bir düşünce savunulur. Yazar bu anlatım tekniğinde karşı olduğu düşünceyi çürütmeye çalışır. Tartışma metinlerinde genellikle okurla karşılıklı konuşma havası vardır ve kinayelere de sıkça yer verilir.
-
-Paragrafta düşünceyi geliştirme yolları
-Karşılaştırma
-İki varlık veya kavramın birbiriyle olan ortak veya farklı yönlerinin ortaya konulduğu türdür. Karşılaştırma türünde gibi, -oysa, -ise ve - en gibi ifadeler sıkça bulunur.
-
-Tanımlama
-Paragrafta bu nedir sorusunun cevabıdır. Tanımlamada özelliklerinden yararlanılarak bir varlığın veya kavramın ne olduğu anlatılmaya çalışılır.
-
-Örneklendirme
-Örneklendirme düşünceyi geliştirmede sıkça kullanılır.Paragrafta geçen konu, kişi, olay vb. İle ilgili örnek(ler) verilir. Yazar yazdığı paragrafta düşüncelerini okura daha iyi geçirebilmek ve okurum zihninde canlandırabilmek için bu tekniği kullanır.
-
-Tanık gösterme
-Yazar yazdığı konularda uzman kişilerin görüşlerine yer vererek yazdıklarını inandırıcı kılmak ister. Tanık göstermede kişilerin görüşleri tırnak işareti içerisinde eksiksiz olarak verilir.
-
-Benzetme
-Anlatılanların okurun kafasında daha iyi canlandırılabilmesi için kullanılan yöntemdir. Benzetmede iki varlık veya iki kavramın birbirleriyle olan ilişkileri ile ortak ve farklı yönleri ortaya konarak bağlantı kurulur.
-
-Kişileştirme
-İnsana ait özelliklerin doğaya veya hayvana aktarılması durumudur.
-
-Sayısal Verilerden Yararlanma
-Yüzdelik dilim, kesir veya herhangi bir konuda sayı bulunduran paragrafta kullanılan yöntemdir.
-
-Paragrafta konu ve ana düşünce
-Konu
-Yazarın paragrafta ele aldığı düşünce, olay veya durumdur. Paragraf okunduktan sonra ''Yazar burada ne anlatmak istiyor?'' sorusunun cevabıdır.
-
-Ana düşünce
-Yazarın paragrafta vermek istediği mesajdır. Ana düşünce küçük bir kısımda verilebildiği gibi paragrafın genelinden de çıkarılabilir. Paragrafta bulunan: ''-oysa, aslında, -kanımca, -önemli olan'' gibi ifadeler genellikle ana düşüncenin başında yer alır. Paragrafta ana düşünceyi bulabilmek için: ''Yazar ne mesaj veriyor ve bunları niçin anlatıyor?'' sorusu sorulmalıdır.
-
-Kategori: Dilbilgisi
-Sayfa en son 00.40, 17 Mart 2024 tarihinde değiştirildi.
-Metin Creative Commons Atıf-BenzerPaylaşım Lisansı altındadır ve ek koşullar uygulanabilir. Bu siteyi kullanarak Kullanım Şartlarını ve Gizlilik Politikasını kabul etmiş olursunuz.
-Vikipedi® (ve Wikipedia®) kâr amacı gütmeyen kuruluş olan Wikimedia Foundation, Inc. tescilli markasıdır.
-Gizlilik politikasıVikipedi hakkındaSorumluluk reddiDavranış KurallarıGeliştiricilerİstatistiklerÇerez politikasıMobil görünümWikimedia FoundationPowered by MediaWiki
-Sınırlı içerik genişliğini değiştir
-
-
   </div>
-  <button type="button" class="btn btn-warning"  (click)="drawer.toggle()">
-    Toggle sidenav
-  </button>
+
+
+
 </mat-drawer-container>
 
 
-<app-footer></app-footer>
