--- a/src/app/admin/components/languages/list/list.component.html
+++ b/src/app/admin/components/languages/list/list.component.html
@@ -11,34 +11,11 @@
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef="PageOfNumber">
-      <th mat-header-cell *matHeaderCellDef> Sayfa Sayısı </th>
-      <td mat-cell *matCellDef="let element"> {{element.PageOfNumber}} </td>
-    </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="AuthorName">
-      <th mat-header-cell *matHeaderCellDef> Yazar Adı </th>
-      <td mat-cell *matCellDef="let element"> {{element.AuthorName}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="AuthorSurname">
-      <th mat-header-cell *matHeaderCellDef> Yazar Soyadı </th>
-      <td mat-cell *matCellDef="let element"> {{element.AuthorSurname}} </td>
-    </ng-container>
-    <ng-container matColumnDef="AuthorBirthDay">
-      <th mat-header-cell *matHeaderCellDef> Doğum Tarihi </th>
-      <td mat-cell *matCellDef="let element"> {{element.AuthorBirthDay}} </td>
-    </ng-container>
-    <ng-container matColumnDef="CatalogName">
-      <th mat-header-cell *matHeaderCellDef> Katalog Adı </th>
-      <td mat-cell *matCellDef="let element"> {{element.CatalogName}} </td>
-    </ng-container>
-    <ng-container matColumnDef="LanguageName">
+    <ng-container matColumnDef="Name">
       <th mat-header-cell *matHeaderCellDef> Dil </th>
-      <td mat-cell *matCellDef="let element"> {{element.LanguageName}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
+
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
