--- a/src/app/admin/layout/layout.component.scss
+++ b/src/app/admin/layout/layout.component.scss
@@ -1,22 +1,19 @@
 .example-container {
   width: 100%;
   height: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+
 padding-bottom: 320px;
 }
 
 .example-sidenav-content {
-
+ width: 100%;
   display: flex;
-  height: 100%;
-  align-items: center;
+  height: 600px;
+
   justify-content: center;
 
 
 }
 
 
-button{
-  margin-left: 1300px;
 
-}
