--- a/src/app/admin/components/languages/list/list.component.scss
+++ b/src/app/admin/components/languages/list/list.component.scss
@@ -1,13 +1,7 @@
 table {
   width: 1000px;
 
+margin-left: 40px;
+margin: auto;
 
-
-}
-div{
-
-  border-left: none;
-        border-radius: 8px;
-
-        margin: auto;
 }
